fixed sidenav. z-index 0 on overlay

--- a/public/profile.css
+++ b/public/profile.css
@@ -14,7 +14,8 @@
 }
 
  #sidenav-overlay{
-   z-index: 998;
+   z-index: 0 !important;
+   opacity: 0 !important;
  }
 
 .list_1 {
